--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,11 @@ header {
   background: #333;
   color: white;
 }
+
+#navbar .nav a:hover {
+  color: white;
+  
+}
 /*////////// LOGO //////////*/
 
 
