--- a/css/style.css
+++ b/css/style.css
@@ -369,5 +369,5 @@ section {
   font-size: 0.75em;
   padding: 10px;
   background: #eee;
-  border-top: 1px solid #;
+  border-top: 1px solid #ccc;
 }
