--- a/css/style.css
+++ b/css/style.css
@@ -364,7 +364,7 @@ section {
 
 /*////////// FOOTER //////////*/
 
-#footer {
+footer {
   text-align: center;
   font-size: 0.75em;
   padding: 10px;
